--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-react": "^7.18.6",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
+    "body-parser": "^1.20.0",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.2",
     "pg": "^8.8.0",
